gcc/testsuite/rust/rustc/ui/issues/issue-61106.rs
fn main() {
    let x = String::new();
    foo(x.clone()); // { dg-error ".E0308." "" { target *-*-* } }
}

fn foo(_: &str) {}

